home - images + styles pronto

--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -150,6 +150,9 @@ a
 	+transition
 	@include font
 
+	*
+		+transition
+
 	&:hover
 		color: rgba($corPrincipal,1)
 		text-decoration: none
@@ -159,7 +162,6 @@ h1, h2, h3, h4, h5, h6
 	@include fontBold
 	margin-bottom: 20px
 	line-height: 110%
-	text-transform: uppercase
 
 
 
