--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,8 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 	<script src="{{ site.url }}js/libs/pace.min.js"></script>
 	<script src="{{ site.url }}js/libs/jquery.onepage-scroll.min.js"></script>
+	<script src="{{ site.url }}js/libs/classie.js"></script>
+	<script src="{{ site.url }}js/libs/modalEffects.js"></script>
 
 	<script src="{{ site.url }}js/script.js"></script>
 
