--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -209,50 +209,32 @@
 				+transition
 				+transition-delay(1s)
 				+transition-duration(1s)
-				width: auto
 				+box-sizing(border-box)
+				width: auto
 				color: $brancoCinza
 
-				&:nth-of-type(1)
-					top: 0
-					bottom: 0
-					left: 0
-					right: 50%
-					background: url(img/home-bio.jpg) center center no-repeat
-					+bgCover
-
-				&:nth-of-type(2)
-					top: 0
-					left: 50%
-					bottom: 50%
-					right: 0
-					background: url(img/home-bio.jpg) center center no-repeat
-					+bgCover
-
-				&:nth-of-type(3)
-					top: 50%
-					left: 50%
-					bottom: 0
-					right: 25%
-					background: url(img/home-bio.jpg) center center no-repeat
-					+bgCover
-
-				&:nth-of-type(4)
-					top: 50%
-					left: 75%
-					bottom: 0
-					right: 0
-					background: url(img/home-bio.jpg) center center no-repeat
-					+bgCover
-
 				span.bgDot
+					position: absolute
+					z-index: 2
+					top: 0
+					left: 0
+					bottom: 0
+					right: 0
+					background: rgba(0,0,0,0.7) url(img/bgDot.png) center center
+
+				span.img
+					display: block
 					position: absolute
 					z-index: 1
 					top: 0
 					left: 0
 					bottom: 0
 					right: 0
-					background: rgba(0,0,0,0.4) url(img/bgDot.png)
+					background-position: center center
+					background-repeat: none
+					+bgCover
+					-webkit-filter: grayscale(1)
+					+scale(1.1)
 
 				article
 					position: absolute
@@ -260,21 +242,119 @@
 					left: 50px
 					bottom: 50px
 					right: 50px
+					top: 50px
+					display: block
+
+					h1
+						margin: 0
+						width: 100%
+						display: block
+						position: absolute
+
+						&:after
+							+transition
+							position: absolute
+							top: 100%
+							left: 0
+							width: 100px
+							height: 2px
+							margin-top: 10px
+							background: $brancoCinza
+							content: ''
 
 					p
+						position: absolute
+						bottom: 0
+						width: 100%
 						margin: 0
+						display: block
+						+animate(fadeOutDown)
+						font-size: 20px
+						line-height: 120%
+
+				&:hover
+					span.bgDot
+						background: rgba(0,0,0,0.1) url(img/bgDot.png) center center !important
+
+					span.img
+						-webkit-filter: grayscale(0)
+						+scale(1)
+
+					article
+						h1
+							&:after
+								width: 100%
+						p
+							+animate(fadeInUp)
+
+
+
+	& > section
+		&:nth-child(1n+1) .content a
+			&:nth-of-type(1)
+				top: 0
+				bottom: 0
+				left: 0
+				right: 50%
+				span.bgDot
+					background: rgba(0,0,0,0.3) url(img/bgDot.png) center center
+				span.img
+					-webkit-filter: grayscale(0)
+
+			&:nth-of-type(2)
+				top: 0
+				left: 50%
+				bottom: 50%
+				right: 0
+
+			&:nth-of-type(3)
+				top: 50%
+				left: 50%
+				bottom: 0
+				right: 25%
+
+			&:nth-of-type(4)
+				top: 50%
+				left: 75%
+				bottom: 0
+				right: 0
+
+		&:nth-child(2n+1) .content a
+			&:nth-of-type(1)
+				top: 0%
+				left: 50%
+				bottom: 0
+				right: 0
+
+			&:nth-of-type(2)
+				top: 0
+				bottom: 50%
+				left: 0
+				right: 50%
+
+			&:nth-of-type(3)
+				top: 50%
+				left: 0
+				bottom: 0
+				right: 75%
+
+			&:nth-of-type(4)
+				top: 50%
+				left: 25%
+				bottom: 0
+				right: 50%
 
 
 
 
 		&.active
 			.title
-				+animate($name: bounceOutUp, $delay: 1.5s)
+				+animate($name: fadeOutUpBig, $delay: 1.6s)
 				display: block
 			.content
 				a
 					article
-						+animate($name: zoomInUp, $delay: 2s)
+						+animate($name: zoomInDown, $delay: 2s)
 
 
 
@@ -342,7 +422,7 @@
 // About
 // ------------------------------------------------------------------
 
-#about
+#wrapper > section#about
 	//background: $vermelho
 
 
@@ -352,24 +432,55 @@
 // startups
 // ------------------------------------------------------------------
 
-#startups
+#wrapper > section#startups
 	//background: $verde
 
 
 // ------------------------------------------------------------------
 // blog
 // ------------------------------------------------------------------
+#wrapper > section#blog
+	.content
+		a
+			article
+				h1
+					font-size: 30px
 
-#blog
-	//background: $amarelo
+				p
+					font-size: 24px
+					font-style: italic
+					+animate(fadeInUp)
 
 
+			&:nth-of-type(1)
+				article
+					p
+						font-size: 42px
 
 // ------------------------------------------------------------------
 // contact
 // ------------------------------------------------------------------
 
-#contact
+#menu
+	.modal-social
+		background: $brancoCinza
+		position: fixed
+		left: 50%
+		top: 50%
+		+translate(-50% -50%)
+		overflow: hidden
+		width: 0
+		height: 0
+		display: block
+
+		&.open
+			width: auto
+			height: auto
+			
+
+
+
+#wrapper > section#contact
 	//background: $laranja
 
 
