--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,8 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style-{{page.style}}.css">
 
 	<!--[if IE]>
 		<link rel="stylesheet" href="ie.css">
