--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,4 +2,32 @@
 
 {{ content }}
 
-{% include footer.html %}
+
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+	<script src="{{ site.url }}js/libs/pace.min.js"></script>
+	<script src="{{ site.url }}js/libs/jquery.onepage-scroll.min.js"></script>
+
+	<script>
+		$(document).ready(function(){
+			$("#wrapper").onepage_scroll({
+				sectionContainer: "section",
+				responsiveFallback: 600,
+				loop: false
+			});
+		});
+	</script>
+
+	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. 
+	<script src="{{ site.url }}js/libs/waypoints.min.js"></script>
+	<script>
+		(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+		function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+		e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+		e.src='//www.google-analytics.com/analytics.js';
+		r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+		ga('create','UA-XXXXX-X');ga('send','pageview');
+	</script>
+	-->
+</body>
+</html>
